[gd_scene load_steps=6 format=3 uid="uid://csl2pwytsh1ew"]

[ext_resource type="Script" path="res://templates/custom_texture_button/scripts/custom_texture_button.gd" id="1_7c64e"]

[sub_resource type="Curve" id="Curve_gbas8"]
_data = [Vector2(0.483221, 0.659341), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="Curve" id="Curve_noos0"]
_data = [Vector2(0.191275, 0.428571), 0.0, 0.0, 0, 0, Vector2(0.791946, 0.27973), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_mt7t5"]
_data = [Vector2(0.187919, 0.56044), 0.0, 0.0, 0, 0, Vector2(0.798658, 0.253378), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_crtau"]
width = 150
curve_x = SubResource("Curve_gbas8")
curve_y = SubResource("Curve_noos0")
curve_z = SubResource("Curve_mt7t5")

[node name="CustomTextureButton" type="BaseButton"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(150, 350)
layout_direction = 0
layout_mode = 3
anchors_preset = -1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.13
anchor_bottom = 0.54
offset_left = 0.0
offset_top = 0.0
offset_right = -109.76
offset_bottom = -309.92
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
disabled = false
toggle_mode = false
button_pressed = false
action_mode = 1
button_mask = 1
keep_pressed_outside = false
button_group = null
shortcut = null
shortcut_feedback = true
shortcut_in_tooltip = true
script = ExtResource("1_7c64e")
text_color = Color(0.752941, 0, 0, 1)
text_hover_color = Color(1, 0, 0, 1)
text_pressed_color = Color(1, 0.72549, 0, 1)
base_color = Color(0.501961, 0.501961, 0.501961, 1)
hover_color = Color(0.25098, 0.25098, 0.25098, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("CurveXYZTexture_crtau")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(150, 41)
layout_mode = 1
anchor_top = 0.883
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.95
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.498039, 0.498039, 0.498039, 1)

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Button Text"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
